; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/ext4/extr_ext4_extents.c_ext4_force_split_extent_at.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/ext4/extr_ext4_extents.c_ext4_force_split_extent_at.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.ext4_ext_path = type { i64, i32 }

@EXT4_EXT_MARK_UNWRIT1 = common dso_local global i32 0, align 4
@EXT4_EXT_MARK_UNWRIT2 = common dso_local global i32 0, align 4
@EXT4_EX_NOCACHE = common dso_local global i32 0, align 4
@EXT4_GET_BLOCKS_PRE_IO = common dso_local global i32 0, align 4
@EXT4_GET_BLOCKS_METADATA_NOFAIL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*, %struct.inode*, %struct.ext4_ext_path**, i32, i32)* @ext4_force_split_extent_at to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ext4_force_split_extent_at(i8* %0, i32* %1, %struct.inode* %2, %struct.ext4_ext_path** %3, i32 %4, i32 %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.inode*, align 8
  %10 = alloca %struct.ext4_ext_path**, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca %struct.ext4_ext_path*, align 8
  %14 = alloca i32, align 4
  store i8* %0, i8** %7, align 8
  store i32* %1, i32** %8, align 8
  store %struct.inode* %2, %struct.inode** %9, align 8
  store %struct.ext4_ext_path** %3, %struct.ext4_ext_path*** %10, align 8
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %15 = load %struct.ext4_ext_path**, %struct.ext4_ext_path*** %10, align 8
  %16 = load %struct.ext4_ext_path*, %struct.ext4_ext_path** %15, align 8
  store %struct.ext4_ext_path* %16, %struct.ext4_ext_path** %13, align 8
  %17 = load %struct.ext4_ext_path*, %struct.ext4_ext_path** %13, align 8
  %18 = load %struct.ext4_ext_path*, %struct.ext4_ext_path** %13, align 8
  %19 = getelementptr inbounds %struct.ext4_ext_path, %struct.ext4_ext_path* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = getelementptr inbounds %struct.ext4_ext_path, %struct.ext4_ext_path* %17, i64 %20
  %22 = getelementptr inbounds %struct.ext4_ext_path, %struct.ext4_ext_path* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 8
  %24 = call i32 @ext4_ext_is_unwritten(i32 %23)
  store i32 %24, i32* %14, align 4
  %25 = load i8*, i8** %7, align 8
  %26 = load i32*, i32** %8, align 8
  %27 = load %struct.inode*, %struct.inode** %9, align 8
  %28 = load %struct.ext4_ext_path**, %struct.ext4_ext_path*** %10, align 8
  %29 = load i32, i32* %11, align 4
  %30 = load i32, i32* %14, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %36

32:                                               ; preds = %6
  %33 = load i32, i32* @EXT4_EXT_MARK_UNWRIT1, align 4
  %34 = load i32, i32* @EXT4_EXT_MARK_UNWRIT2, align 4
  %35 = or i32 %33, %34
  br label %37

36:                                               ; preds = %6
  br label %37

37:                                               ; preds = %36, %32
  %38 = phi i32 [ %35, %32 ], [ 0, %36 ]
  %39 = load i32, i32* @EXT4_EX_NOCACHE, align 4
  %40 = load i32, i32* @EXT4_GET_BLOCKS_PRE_IO, align 4
  %41 = or i32 %39, %40
  %42 = load i32, i32* %12, align 4
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %44, label %46

44:                                               ; preds = %37
  %45 = load i32, i32* @EXT4_GET_BLOCKS_METADATA_NOFAIL, align 4
  br label %47

46:                                               ; preds = %37
  br label %47

47:                                               ; preds = %46, %44
  %48 = phi i32 [ %45, %44 ], [ 0, %46 ]
  %49 = or i32 %41, %48
  %50 = call i32 @ext4_split_extent_at(i8* %25, i32* %26, %struct.inode* %27, %struct.ext4_ext_path** %28, i32 %29, i32 %38, i32 %49)
  ret i32 %50
}

declare dso_local i32 @ext4_ext_is_unwritten(i32) #1

declare dso_local i32 @ext4_split_extent_at(i8*, i32*, %struct.inode*, %struct.ext4_ext_path**, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
